# gabos-mcp

./: .dockerignore  .env-example  .gitignore  .mcp.json  CLAUDE.md  Dockerfile  README.md  docker-compose.yml-example  pyproject.toml
.github/workflows/: tests.yml
.zed/: settings.json
src/gabos_mcp/: __init__.py  main.py  server.py
src/gabos_mcp/extractors/: __init__.py  agent_assembler.py  agent_store.py  base.py  chm.py  knowledge.py  schema.py  schema_xml.py
src/gabos_mcp/extractors/schemas/: ConfigurationDocumentation.xsd
src/gabos_mcp/tools/: agents.py  chm.py  knowledge.py  schema.py  telemetry.py
src/gabos_mcp/utils/: __init__.py  auth.py  backup.py  db.py  environments.py  search.py  serialization.py  stores.py  telemetry.py  uploads.py
tests/test_extractors/: test_agent_assembler.py  test_agent_store.py  test_chm.py  test_knowledge.py  test_schema.py  test_schema_xml.py
tests/test_tools/: conftest.py  test_agents.py  test_chm.py  test_knowledge.py  test_schema.py
tests/test_utils/: test_auth.py  test_backup.py  test_environments.py  test_search.py  test_serialization.py  test_telemetry.py  test_uploads.py
