[project]
name = "gabos-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [
    { name = "Gabriel Torres Gamez", email = "gabriel.torres@fuet.ch" }
]
requires-python = ">=3.14"
dependencies = [
    "fastmcp>=3.0.0",
    "ruff>=0.15.2",
    "ty>=0.0.18",
]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]

[project.scripts]
gabos-mcp = "gabos_mcp:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"
