[project]
name = "gabos-mcp"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
authors = [{ name = "Gabriel Torres Gamez", email = "gabriel.torres@fuet.ch" }]
requires-python = ">=3.14"
dependencies = [
    "aiofiles>=25.1.0",
    "aiosqlite>=0.22.1",
    "beautifulsoup4>=4.13.0",
    "fastmcp>=3.0.2",
    "html2text>=2024.2.26",
    "lxml>=6.0.2",
    "platformdirs>=4.9.2",
]

[dependency-groups]
dev = ["pytest>=9.0.2", "pytest-asyncio>=1.3.0", "ruff>=0.15.2", "ty>=0.0.18"]

[project.scripts]
gabos-mcp = "gabos_mcp.main:main"

[build-system]
requires = ["uv_build>=0.10.0,<0.11.0"]
build-backend = "uv_build"

[tool.ruff]
target-version = "py314"
line-length = 120

[tool.ruff.format]
indent-style = "tab"

[tool.ruff.lint]
extend-select = [
    "W",     # pycodestyle warnings
    "I",     # import sorting
    "UP",    # pyupgrade
    "B",     # bugbear
    "C4",    # comprehensions
    "ISC",   # implicit string concat
    "RET",   # return practices
    "SIM",   # simplification
    "TID",   # import practices
    "TC",    # TYPE_CHECKING enforcement
    "PTH",   # pathlib over os.path
    "D",     # pydocstyle
    "N",     # pep8-naming
    "ANN",   # type annotations
    "PERF",  # perflint
    "RUF",   # ruff-specific rules
    "A",     # flake8-builtins
    "PIE",   # flake8-pie
    "RSE",   # flake8-raise
    "FLY",   # flynt
    "LOG",   # flake8-logging
    "G",     # logging format
    "DTZ",   # datetime timezone
    "SLOT",  # __slots__ enforcement
    "ICN",   # import conventions
    "FURB",  # refurb
    "T10",   # debugger statements
    "BLE",   # blind except
    "ASYNC", # async best practices
    "NPY",   # numpy (silent if unused)
    "PD",    # pandas (silent if unused)
    "DOC",   # pydoclint
    "S",     # bandit security
    "PT",    # pytest style
    "ARG",   # unused arguments
    "EM",    # error messages
    "TD",    # todos
    "ERA",   # eradicate commented-out code
    "C90",   # mccabe complexity
    "TRY",   # tryceratops
    "PL",    # pylint
    "T20",   # print statements
    "INP",   # no implicit namespace packages
]
ignore = [
    "W191",     # tab indentation
    "D206",     # tab docstring indentation
    "ANN401",   # allow typing.Any where intentional
    "S101",     # allow assert in tests (see per-file-ignores)
    "COM812",   # conflicts with formatter
    "TRY003",   # exception messages in separate variables adds boilerplate, no readability gain
    "EM101",    # same as TRY003
    "EM102",    # same as TRY003
    "ERA001",   # numbered section comments (# 1. ...) falsely flagged as commented-out code
    "ASYNC240", # asyncio project; trio/anyio.path recommendation irrelevant
    "A002",     # `id` and similar arg names shadowing builtins is idiomatic Python
    "TC002",    # pydantic evaluates tool type hints at runtime; TYPE_CHECKING imports break FastMCP tools
]

[tool.ruff.lint.per-file-ignores]
"tests/**" = [
    "D",       # no docstring requirements
    "DOC",     # no docstring signature matching
    "ANN",     # no annotation requirements
    "S101",    # assert is idiomatic in pytest
    "ARG",     # fixtures often have unused args
    "SLF001",  # private access is common in tests
    "T20",     # print is fine in tests
    "ERA001",  # commented-out tests are common
    "PLR2004", # magic values common in assertions
    "RUF059",  # unpacked fixture vars often partially unused
    "DTZ",     # test time calculations use local time intentionally
]
"src/gabos_mcp/extractors/**" = [
    "S608", # SQL strings use internal constants + parameterized values; not user input
]
"src/gabos_mcp/utils/search.py" = [
    "S608", # SQL strings use module-level constant for table name
]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.lint.pylint]
max-args = 12
max-returns = 7
max-branches = 12
max-statements = 60

[tool.ruff.lint.flake8-tidy-imports]
ban-relative-imports = "parents"

[tool.ruff.lint.flake8-bugbear]
extend-immutable-calls = ["fastapi.Depends", "fastapi.Query", "fastapi.Header"]
